# teamup-iqtest_api

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: unittest_linter_check.yaml
app/: .env.example  Dockerfile  requirements.txt
app/api/: mixins.py  models.py
app/api/migrations/: 0001_initial.py  0002_auto_20230609_2243.py  0003_rename_test_id_iqtest_test.py  0004_alter_iqtest_test.py  0005_alter_iqtest_test.py  0006_eqtest.py  0007_alter_eqtest_result.py  0008_auto_20230610_2242.py
app/api/services/: domain.py
app/api/v1/: mixins.py  serializers.py  tests.py  urls.py  views.py
app/config/: settings.py
app/config/components/: applications.py  base.py  database.py
app/fixtures/: eqtest.json  iqtest.json  test.json
app/uwsgi/: uwsgi.ini
openapi/: openapi.yaml
